# plastic

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
Dimensionality Reduction/: celluloid_with_ridge.py  celluloid_wth_auto_encoder.py  kmode_with_ridge.py  kmode_wth_auto_encoder.py
core/: labeledmutationmatrix.py  philogenytree.py  phylogenytree.py  test_labeledmutationmatrix.py
data/: cells-ridge.csv
example_basic_run/: example_run.py  mut_clusters
example_basic_run/clust/: clustered1  clustered2
example_basic_run/trees/: tree2.gv
notebooks/: example.ipynb  medullo.ipynb
notebooks/medullo/clustered/: GSM3905406_BCH807.p  GSM3905407_BCH825.p  GSM3905408_BCH1031.p  GSM3905409_BCH1205.p  GSM3905410_MUV11.p  (+32 more)
phylo/: celluloid.py  mp3.py  sasc.py
phylo/_core/: genotypematrix.py  phylogenytree.py
phylo/celluloid/: celluloid.py
phylo/core/: genotypematrix.py  labeledmutationmatrix.py  loggablecall.py  phylogenytree.py  sascviz.py
phylo/mp3/: mp3.py
phylo/sasc/: sasc.py
plastic/: __init__.py  clustering.py  plot.py  treesim.py
plastic/_core/: genotypematrix.py  phylogenytree.py
plastic/phylogeny/: __init__.py  _phylogeny.py
sasc-bindings-provisional/: sasc-compute-api.pxd  sasc-compute-wrapper.pyx  sasc-compute.c  sasc-compute.h  sasc_compute.c
submodules/sasc/: sasc-tests.ipynb  setup.py
tests/: test_labeledmutationmatrix.py  test_sasccompute.py
tests/core/: test_labeledmutationmatrix.py  test_phylogenytree.py  test_sascphylogeny.py
tests/sasc/: test_sasccompute.py
tests/sascpy/: test_sasccompute.py
(+558 files in other folders)
